--- a/Ruler/MainWindow.xaml
+++ b/Ruler/MainWindow.xaml
@@ -8,9 +8,11 @@
         x:Name="mainWindow"
         Title="Ruler"
         WindowStyle="None"
-        WindowStartupLocation="Manual"
         AllowsTransparency="True"
         Background="Transparent"
+        WindowStartupLocation="Manual"
+        Left="{Binding Left, Mode=TwoWay}"
+        Top="{Binding Top, Mode=TwoWay}"
         Width="{Binding Width, Mode=TwoWay}"
         Height="{Binding Height, Mode=TwoWay}"
         MinWidth="20"
