--- a/Ruler/OverlayWindow.xaml
+++ b/Ruler/OverlayWindow.xaml
@@ -14,8 +14,7 @@
         d:DesignWidth="80"
         d:DesignHeight="80">
 
-    <local:Angle Foreground="#FFFF6600"
-                 FontSize="12"
+    <local:Angle FontSize="12"
                  Origin="{Binding Origin}"
                  MousePoint="{Binding MousePoint}"
                  Orientation="{Binding Orientation}"
