--- a/Ruler/SizeToolsWindow.xaml
+++ b/Ruler/SizeToolsWindow.xaml
@@ -79,10 +79,14 @@
         <GroupBox Grid.Row="3" Margin="3,0" Header="Magnifier">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Label Grid.Row="1" Grid.Column="0" Content="Width" Margin="3.0" />
-                    <TextBox Grid.Row="1" Grid.Column="1" Width="60" Margin="3,0" />
+                    <Label Grid.Row="1" Grid.Column="0" Content="Width" Margin="3,0" />
+                    <local:IntegerTextBox Width="70" VerticalAlignment="Center" Margin="3" 
+                                          Step="10" Minimum="100" Maximum="2000" 
+                                          Value="{Binding MagnifierWidth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <Label Grid.Row="1" Grid.Column="3" Content="Height" Margin="3,0" />
-                    <TextBox Grid.Row="1" Grid.Column="4" Width="60" Margin="3,0" />
+                    <local:IntegerTextBox Margin="3" Width="70" VerticalAlignment="Center"
+                                          Step="10" Minimum="100" Maximum="2000" 
+                                          Value="{Binding MagnifierHeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </StackPanel>
 
                 <DockPanel LastChildFill="true">
