--- a/Ruler/Themes/Generic.xaml
+++ b/Ruler/Themes/Generic.xaml
@@ -4,6 +4,43 @@
     xmlns:local="clr-namespace:Ruler">
 
 
+    <Style TargetType="{x:Type local:IntegerTextBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:IntegerTextBox}">
+                    <Grid Background="Transparent">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox Name="tbmain" Grid.ColumnSpan="2" Grid.RowSpan="2"
+                                 Text="{Binding Value, Mode=TwoWay, NotifyOnSourceUpdated=True, 
+                            NotifyOnValidationError=True, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:IntegerTextBox}}}" />
+                        <RepeatButton Name="PART_UpButton" BorderThickness="0" Grid.Column="1" Grid.Row="0"
+                                      Width="13" Background="Transparent">
+                            <Path Fill="Black" Data="M 0 3 L 6 3 L 3 0 Z"/>
+                        </RepeatButton>
+                        <RepeatButton Name="PART_DownButton" BorderThickness="0" Grid.Column="1" Grid.Row="1"
+                                      Width="13" Background="Transparent">
+                            <Path Fill="Black" Data="M 0 0 L 3 3 L 6 0 Z"/>
+                        </RepeatButton>
+
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="False">
+                            <Setter Property="Visibility" TargetName="PART_UpButton" Value="Collapsed"/>
+                            <Setter Property="Visibility" TargetName="PART_DownButton" Value="Collapsed"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="{x:Type local:Scale}">
         <Setter Property="Template">
             <Setter.Value>
