context menu and key bindings

--- a/Ruler/MainWindow.xaml
+++ b/Ruler/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Ruler.MainWindow"
+﻿
+<Window x:Class="Ruler.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,16 +26,70 @@
         <WindowChrome ResizeBorderThickness="{Binding ResizeBorder}"/>
     </WindowChrome.WindowChrome>
 
+    <Window.Resources>
+        <local:EnumBooleanConverter x:Key="enumToBool"/>
+    </Window.Resources>
+
     <Grid>
         <Grid.ContextMenu>
             <ContextMenu>
-                <MenuItem Header="Layout" Click="ShowLayoutDialog_Click"/>
                 <MenuItem Header="Angle" IsCheckable="True" 
                           IsChecked="{Binding AngleVisible, Mode=TwoWay}"
                           InputGestureText="A"/>
                 <MenuItem Header="Magnifier" IsCheckable="True" 
-                          IsChecked="{Binding MagnifierVisible,Mode=TwoWay}"
+                          IsChecked="{Binding MagnifierVisible, Mode=TwoWay}"
                           InputGestureText="Q"/>
+                <MenuItem Header="Units">
+                    <MenuItem Header="Pixel" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Pixel}"
+                              InputGestureText="1"/>
+                    <MenuItem Header="DIP" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=DIP}"
+                              InputGestureText="2"/>
+                    <MenuItem Header="Point" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Point}"
+                              InputGestureText="3"/>
+                    <MenuItem Header="Centimeter" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=CM}"
+                              InputGestureText="4"/>
+                    <MenuItem Header="Inch" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Inch}"
+                              InputGestureText="5"/>
+                    <MenuItem Header="Percent" IsCheckable="True"
+                              IsChecked="{Binding ScaleUnits, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Percent}"
+                              InputGestureText="6"/>
+                </MenuItem>
+                <MenuItem Header="Orientation">
+                    <MenuItem Header="Horizontal" IsCheckable="True"
+                              IsChecked="{Binding Orientation,Mode=TwoWay, 
+                                Converter={StaticResource enumToBool}, ConverterParameter=Horizontal}"
+                              InputGestureText="H"/>
+                    <MenuItem Header="Vertical" IsCheckable="True"
+                              IsChecked="{Binding Orientation, Mode=TwoWay, 
+                                Converter={StaticResource enumToBool}, ConverterParameter=Vertical}"
+                              InputGestureText="V"/>
+                </MenuItem>
+                <MenuItem Header="Zero Point">
+                    <MenuItem Header="Near" IsCheckable="True"
+                              IsChecked="{Binding ZeroPoint, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Near}"
+                              InputGestureText="N"/>
+                    <MenuItem Header="Far" IsCheckable="True"
+                              IsChecked="{Binding ZeroPoint, Mode=TwoWay,
+                                Converter={StaticResource enumToBool}, ConverterParameter=Far}"
+                              InputGestureText="F"/>
+                </MenuItem>
+                <MenuItem Header="Flip Scale" IsCheckable="True"
+                          IsChecked="{Binding Flip, Mode=TwoWay}"
+                          InputGestureText="S"/>
+                <MenuItem Header="Layout" Click="ShowLayoutDialog_Click"/>
+                <Separator/>
                 <MenuItem Header="Exit" Click="Exit_Click"
                           InputGestureText="Esc"/>
             </ContextMenu>
