--- a/Ruler/SizeToolsWindow.xaml
+++ b/Ruler/SizeToolsWindow.xaml
@@ -7,15 +7,16 @@
         mc:Ignorable="d"
         Title="Ruler Layout" 
         Icon="/ruler;component/images/ruler.ico"
-        FontSize="13"
+        FontSize="{Binding DialogFontSize}"
         Width="480"
         SizeToContent="Height"
         WindowStyle="SingleBorderWindow">
 
     <Window.Resources>
         <local:EnumBooleanConverter x:Key="enumBool"/>
+        <local:InverseBooleanConverter x:Key="not" />
     </Window.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,7 +24,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
         <GroupBox Grid.Row="0" Margin="3,3,3,0" Header="Orientation">
@@ -77,7 +80,107 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="3" Margin="3,0" Header="Magnifier">
+        <GroupBox Grid.Row="3" Margin="3,0" Header="Color Theme">
+            <StackPanel Orientation="Horizontal">
+                <RadioButton Content="Light" Margin="3" GroupName="Color"
+                         IsChecked="{Binding ColorTheme, 
+                            Converter={StaticResource enumBool}, ConverterParameter=Light, Mode=TwoWay}"/>
+                <RadioButton Content="Dark" Margin="3" GroupName="Color"
+                         IsChecked="{Binding ColorTheme, 
+                            Converter={StaticResource enumBool}, ConverterParameter=Dark, Mode=TwoWay}"/>
+                <RadioButton Content="Custom" Margin="3" GroupName="Color"
+                         IsChecked="{Binding ColorTheme, 
+                            Converter={StaticResource enumBool}, ConverterParameter=Custom, Mode=TwoWay}"/>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Grid.Row="4" Margin="3,0" Header="Fonts">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Margin="0,3" 
+                           HorizontalAlignment="Right" Text="Font family" />
+                <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="6,3"
+                          HorizontalAlignment="Left" Width="200"
+                          ItemsSource="{Binding Path=FontFamilies}"
+                          SelectedValuePath="FamilyName"
+                          SelectedValue="{Binding Path=FontFamily}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding FamilyName}">
+                                <TextBlock.Style>
+                                    <Style TargetType="TextBlock">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding IsMonospaced}" Value="True">
+                                                <Setter Property="FontWeight" Value="Bold"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="0,3" 
+                           HorizontalAlignment="Right" Text="Ruler font size" />
+                <TextBox Grid.Row="1" Grid.Column="1" Margin="6,3" Width="48">
+                    <TextBox.Text>
+                        <Binding Path="FontSize" Mode="TwoWay" 
+                                    UpdateSourceTrigger="PropertyChanged" Delay="1250">
+                            <Binding.ValidationRules>
+                                <local:ValueRangeRule Min="8" Max="24"/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <TextBlock Grid.Row="1" Grid.Column="2" Margin="12,3" Text="432.5"
+                           FontFamily="{Binding Path=FontFamily}"
+                           FontSize="{Binding Path=FontSize}"/>
+
+                <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,3" 
+                           HorizontalAlignment="Right" Text="Marker font size" />
+                <TextBox Grid.Row="2" Grid.Column="1" Margin="6,3" Width="48">
+                    <TextBox.Text>
+                        <Binding Path="MarkerFontSize" Mode="TwoWay" 
+                                    UpdateSourceTrigger="PropertyChanged" Delay="1250">
+                            <Binding.ValidationRules>
+                                <local:ValueRangeRule Min="8" Max="24"/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <TextBlock Grid.Row="2" Grid.Column="2" Margin="12,3" Text="432.5"
+                           FontFamily="{Binding Path=FontFamily}"
+                           FontSize="{Binding Path=MarkerFontSize}"/>
+
+                <TextBlock Grid.Row="3" Grid.Column="0" Margin="0,3" 
+                           HorizontalAlignment="Right" Text="Dialog font size" />
+                <TextBox Grid.Row="3" Grid.Column="1" Margin="6,3" Width="48">
+                    <TextBox.Text>
+                        <Binding Path="DialogFontSize" Mode="TwoWay" 
+                                    UpdateSourceTrigger="PropertyChanged" Delay="1250">
+                            <Binding.ValidationRules>
+                                <local:ValueRangeRule Min="8" Max="24"/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <!--<TextBlock Grid.Row="3" Grid.Column="2" Margin="12,3" Text="432.5"
+                           FontFamily="{Binding Path=FontFamily}"
+                           FontSize="{Binding Path=DialogFontSize}"/>-->
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Grid.Row="5" Margin="3,0" Header="Magnifier">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Grid.Row="1" Grid.Column="0" Content="Width" Margin="3,0" />
@@ -105,7 +208,7 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="4" Margin="3,0" Header="Angle">
+        <GroupBox Grid.Row="6" Margin="3,0" Header="Angle">
             <StackPanel Orientation="Horizontal">
                 <CheckBox Content="Show Perpendicular" Margin="3"
                           IsChecked="{Binding Perpendicular}"/>
