--- a/Ruler/MainWindow.xaml
+++ b/Ruler/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿
-<Window x:Class="Ruler.MainWindow"
+﻿<Window x:Class="Ruler.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -103,6 +102,7 @@
                      FontFamily="{Binding FontFamily}"
                      FontSize="{Binding FontSize}"
                      MarkerFontSize="{Binding MarkerFontSize}"
+                     ShortAxis="{Binding ShortAxis, Mode=OneWayToSource}"
                      ColorTheme="{Binding ColorTheme}"
                      Orientation="{Binding Orientation}"
                      ScaleUnits="{Binding ScaleUnits}"
@@ -110,6 +110,11 @@
                      Flip="{Binding Flip}"
                      TrackPoint="{Binding TrackPoint}"
                      Markers="{Binding Markers}"/>
+
+        <!--<TextBlock HorizontalAlignment="Left" VerticalAlignment="Bottom">
+            <Run Text="{Binding Width}" />
+            <Run Text="{Binding Height}" />
+        </TextBlock>-->
 
     </Grid>
 
