add top most and opacity controls

--- a/Ruler/MainWindow.xaml
+++ b/Ruler/MainWindow.xaml
@@ -8,6 +8,7 @@
         x:Name="mainWindow"
         Title="Ruler"
         Icon="/ruler;component/images/ruler.ico"
+        Topmost="{Binding TopMost}"
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
@@ -104,6 +105,7 @@
                      MarkerFontSize="{Binding MarkerFontSize}"
                      ShortAxis="{Binding ShortAxis, Mode=OneWayToSource}"
                      ColorTheme="{Binding ColorTheme}"
+                     Opacity="{Binding Opacity}"
                      Orientation="{Binding Orientation}"
                      ScaleUnits="{Binding ScaleUnits}"
                      ZeroPoint="{Binding ZeroPoint}"
